--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,8 +33,21 @@ h2,
 h3 {
     font-family: var(--secondary-font);
     color: var(--primary-color);
+
 }
 
 .sub-heading-color {
     color: var(--highlight-color);
+}
+
+/* grid visualisation CSS for testing */
+
+.container,
+.row {
+    border: 2px solid black;
+}
+
+.col-12 {
+    border: 2px solid white;
+    background-color: lightgray;
 }
