--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,9 +40,19 @@ h3 {
     color: var(--highlight-color);
 }
 
+/* Navbar styles */
+
+#navbar {
+    background-color: var(--primary-color);
+}
+
+#navbar .logo {
+    width: 30px; /* Target navbar logo and adjust logo size as was too big */
+}
+
 /* grid visualisation CSS for testing */
 
-.container,
+/* .container,
 .row {
     border: 2px solid black;
 }
@@ -50,4 +60,4 @@ h3 {
 .col-12 {
     border: 2px solid white;
     background-color: lightgray;
-}
+} */
