add header text

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,11 +33,17 @@ h2,
 h3 {
     font-family: var(--secondary-font);
     color: var(--primary-color);
+    text-transform: uppercase;
 
 }
 
 .sub-heading-color {
     color: var(--highlight-color);
+}
+
+.section {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 /* Navbar styles */
@@ -49,6 +55,16 @@ h3 {
 #navbar .logo {
     width: 30px; /* Target navbar logo and adjust logo size as was too big */
 }
+
+
+/* Header styles */
+
+#header .lead {
+    font-family: var(--secondary-font);
+}
+
+
+
 
 /* grid visualisation CSS for testing */
 
