--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,8 +49,7 @@ h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+  padding-top: 4rem; /* adjust top padding for navbar to not overlap heading when navigated to from the navbar */
 }
 
 /* Button styles */
